# simple_kafka_rust

./: Cargo.toml  README.md
src/: client_run.rs  lib.rs  server_run.rs
src/client/: client.rs  error.rs
src/common/: message.rs
src/server/: error.rs  mod.rs  server.rs  service.rs
