[package]
name = "simple_kafka_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server_run.rs"

[[bin]]
name = "client"
path = "src/client_run.rs"

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
thiserror = "1.0.40"
log = "0.4.18"
env_logger = "0.10.0"

